[package]
name = "qml"
version = "0.0.3"
authors = ["White-Oak <lpzhelud@gmail.com>"]
build = "build.rs"

description = "Safe QML bindings for Rust"
repository = "https://github.com/White-Oak/qml-rust"
readme = "README.md"
keywords = ["QML", "FFI", "Qt", "bindings", "GUI"]
license = "Apache-2.0"


[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
