[package]
name = "qml"
version = "0.0.5"
authors = ["White-Oak <lpzhelud@gmail.com>"]
build = "build.rs"

description = "Safe QML bindings for Rust"
repository = "https://github.com/White-Oak/qml-rust"
documentation = "https://docs.rs/qml/"
readme = "README.md"
keywords = ["QML", "FFI", "Qt", "bindings", "GUI"]
license = "MIT"


[dependencies]
libc = "0.2"
lazy_static = "0.2"
